syntax = "proto3";

package net.devh.boot.grpc.example;

option java_multiple_files = true;
option java_package = "com.example.demo";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service MyService {

  rpc Create1 (HelloRequest) returns (HelloReply) {
  }
  rpc Create2 (HelloRequest) returns (HelloReply) {
  }

  rpc Create3 (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}